--- a/counter.html
+++ b/counter.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="counter_block">
-        <div class="title">Counter</div>
+        <div class="title">L2 Counter</div>
         <div class="display_block">0</div>
         <div class="parameter">
             <div class="decrease_btn">decrease</div>
